refactor: simplify workflow handling
Signed-off-by: Chris Laprun <claprun@redhat.com>